--- a/css/styles.css
+++ b/css/styles.css
@@ -95,21 +95,32 @@ body {
     height: 100vh;
     width: 100vw;
     -moz-background-size: cover;
+    -webkit-background-size: cover;
     background-size: cover;
 }
 .imgA{
+    -moz-background: #000 url("../img/d.jpg") center center fixed no-repeat;
+    -webkit-background: #000 url("../img/d.jpg") center center fixed no-repeat;
     background: #000 url("../img/d.jpg") center center fixed no-repeat;
 }
 .imgB{
+    -moz-background: #000 url("../img/c.jpg") center center fixed no-repeat;
+    -webkit-background: #000 url("../img/c.jpg") center center fixed no-repeat;
     background: #000 url("../img/c.jpg") center center fixed no-repeat;
 }
 .imgC{
+    -moz-background: #000 url("../img/a.jpg") center center fixed no-repeat;
+    -webkit-background: #000 url("../img/a.jpg") center center fixed no-repeat;
     background: #000 url("../img/a.jpg") center center fixed no-repeat;
 }
 .imgD{
+    -moz-background: #000 url("../img/b.jpg") center center fixed no-repeat;
+    -webkit-background: #000 url("../img/b.jpg") center center fixed no-repeat;
     background: #000 url("../img/b.jpg") center center fixed no-repeat;
 }
 .imgE{
+    -moz-background: #000 url("../img/e.jpg") center center fixed no-repeat;
+    -webkit-background: #000 url("../img/e.jpg") center center fixed no-repeat;
     background: #000 url("../img/e.jpg") center center fixed no-repeat;
 }
 .title{
